client: fix scrollbar color

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -6,4 +6,9 @@
 :host {
   font-size: 17px;
   --va-font-family: 'Source Sans 3', sans-serif !important;
+  color-scheme: light;
+}
+
+* {
+  scrollbar-color: auto !important;
 }
